# ne-renewable-siting

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.json
.claude/state/: delegation_violations.json  last_turn_duration.txt  turn_durations.json
backend/: main.py
backend/routers/: chat.py  ownership.py  parcel.py  repd.py  substation.py
backend/services/: chat_handler.py  claude_tools.py  data_store.py  raster_sampler.py
data/: data_manifest.json  ne_england.geojson
data/processed/: ccod_ne.manifest.json  la_boundaries.geojson  npg_ecr.geojson  npg_ecr.manifest.json  npg_headroom.geojson  npg_headroom.manifest.json  npg_substations_points.geojson  npg_substations_points.manifest.json  parcels.manifest.json  repd.geojson  repd.manifest.json  solar.manifest.json  wind.manifest.json
data/processed/constraints/: flood_zones.manifest.json  green-belt.geojson  green-belt.manifest.json  listed-building.manifest.json  national-landscape.geojson  national-landscape.manifest.json  national-park.geojson  national-park.manifest.json  scheduled-monument.geojson  scheduled-monument.manifest.json  (+2 more)
data/raw/: solar_pvout.tif  wind_speed_100m.tif
docs/: methodology.md
etl/: attributes.py  config.py  manifest.py  ne_polygon.py  pmtiles_build.py  run_all.py  upload_r2.py
etl/sources/: ccod.py  constraints.py  flood.py  inspire.py  npg.py  repd.py  solar.py  wind.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: about.md  methodology.md  tile_urls.json
frontend/src/: main.js  style.css
