[project]
name = "ne-renewable-siting"
version = "0.0.1"
description = "Single-page MapLibre map of North East England showing renewable siting opportunities and grid headroom."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas",
    "shapely",
    "pandas",
    "requests",
    "pyproj",
    "rasterio",
    "fiona",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etl", "backend"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
