[project]
name = "ne-renewable-siting"
version = "0.0.1"
description = "Single-page MapLibre map of North East England showing renewable siting opportunities and grid headroom."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas",
    "shapely",
    "pandas",
    "requests",
    "pyproj",
    "rasterio",
    "fiona",
    "boto3>=1.43.5",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "rio-pmtiles>=1.2.1",
    "mapbox-vector-tile>=2.2.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.13.4",
    "anthropic>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etl", "backend"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
